push all core js and new dir

--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
   "dependencies": {
-    "inquirer": "^8.2.4",
+    "inquirer": "^8.2.5",
     "jest": "^29.5.0"
-  }
+  },
+  "name": "svg_logo_maker",
+  "description": "A command line application that takes in user input to generate a SVG logo and save it as an SVG file.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "example": "examples",
+    "lib": "lib",
+    "test": "tests"
+  },
+  "scripts": {
+    "test": "jest lib/tests"
+    
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jenho-webdev/SVG_Logo_Maker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+  "url": "https://github.com/jenho-webdev/SVG_Logo_Maker/issues"
+  },
+  "homepage": "https://github.com/jenho-webdev/SVG_Logo_Maker#readme"
 }
